Alembic crash - long object name #49878

Closed
opened 2016-10-29 14:50:29 +02:00 by Ejner Fergo · 4 comments

System Information
Arch Linux 64bit

Blender Version
Broken: 2.78a / master 753edaf

Short description of error
Reporting on behalf of user from blenderartists.org:
https://blenderartists.org/forum/showthread.php?399763-Alembic-I-O&p=3110927&viewfull=1#post3110927

I suspect it is because of the very long object name (95 characters):
graphiste_20161013_1304:graphiste_20161012_1731:camera_010_main_f515_1271_v04:CAM_main_tracking

Exact steps for others to reproduce the error
Import the below .abc file
main_cam.abc

Crash log:
blender.crash.txt

**System Information** Arch Linux 64bit **Blender Version** Broken: 2.78a / master 753edaf **Short description of error** Reporting on behalf of user from blenderartists.org: https://blenderartists.org/forum/showthread.php?399763-Alembic-I-O&p=3110927&viewfull=1#post3110927 I suspect it is because of the *very* long object name (95 characters): graphiste_20161013_1304:graphiste_20161012_1731:camera_010_main_f515_1271_v04:CAM_main_tracking **Exact steps for others to reproduce the error** Import the below .abc file [main_cam.abc](https://archive.blender.org/developer/F388481/main_cam.abc) Crash log: [blender.crash.txt](https://archive.blender.org/developer/F388482/blender.crash.txt)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @EjnerFergo

Added subscriber: @EjnerFergo
Kévin Dietrich self-assigned this 2016-10-29 15:50:38 +02:00

This issue was referenced by d3b0977a35

This issue was referenced by d3b0977a354d91c363d7128f3e0ef2c5eea977e7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49878
No description provided.