Fix T49878: Alembic crash with long object name

Crash comes from writing to char array (ID::name) out its bound and thus
overriding memory in the ID struct.