source/blender/alembic/intern/abc_camera.cc
@@ -119,7 +119,7 @@ bool AbcCameraReader::valid() const
 
 void AbcCameraReader::readObjectData(Main *bmain, float time)
 {
-	Camera *bcam = static_cast<Camera *>(BKE_camera_add(bmain, "abc_camera"));
+	Camera *bcam = static_cast<Camera *>(BKE_camera_add(bmain, m_data_name.c_str()));
 
 	ISampleSelector sample_sel(time);
 	CameraSample cam_sample;
@@ -154,8 +154,6 @@ void AbcCameraReader::readObjectData(Main *bmain, float time)
 	bcam->clipend = cam_sample.getFarClippingPlane();
 	bcam->gpu_dof.focus_distance = cam_sample.getFocusDistance();
 	bcam->gpu_dof.fstop = cam_sample.getFStop();
-
-	BLI_strncpy(bcam->id.name + 2, m_data_name.c_str(), m_data_name.size() + 1);
 
 	m_object = BKE_object_add_only_object(bmain, OB_CAMERA, m_object_name.c_str());
 	m_object->data = bcam;
